--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.39.0",
+    "@types/nodemailer": "^7.0.9",
     "lucide-react": "^0.563.0",
+    "nodemailer": "^8.0.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0"
