--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.39.0",
     "@types/nodemailer": "^7.0.9",
+    "@vercel/node": "^5.5.33",
     "lucide-react": "^0.563.0",
     "nodemailer": "^8.0.1",
     "react": "^19.2.4",
